[package]
name = "ecies_study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k256={ version = "0.9.6", features = ["ecdh"] }
hex="0.4.3"
rand_core="0.6.3"
hkdf = "0.12.3"
sha2 = "0.10.7"
aes-gcm = "0.10.2"
