[package]
name = "ecies_study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic-curve = { version = "0.13.5", features = ["ecdh"] }
k256 = "0.13.1"
rand_core = "0.6.3"
sha2 = "0.10.7"
aes-gcm = "0.10.2"
hkdf = "0.12.3"

